--- a/src/main/webapp/WEB-INF/views/templates/layouts.xml
+++ b/src/main/webapp/WEB-INF/views/templates/layouts.xml
@@ -15,6 +15,18 @@
 		
 	</definition>
 	
+	<definition name="empty" template="/WEB-INF/views/templates/EmptyLayout.jsp">
+		<put-attribute name="content" value=""/>
+	</definition>
+	
+	<definition name="empty/*" extends="empty">
+        <put-attribute name="content" value="/WEB-INF/views/{1}.jsp"></put-attribute>
+    </definition>
+    
+    <definition name="empty/*/*" extends="empty">
+        <put-attribute name="content" value="/WEB-INF/views/{1}/{2}.jsp"></put-attribute>
+    </definition>
+	
 	<definition name="*" extends="layouts">
 		<put-attribute name="body" value="/WEB-INF/views/{1}.jsp" />
 	</definition>
