--- a/src/main/webapp/css/comment.css
+++ b/src/main/webapp/css/comment.css
@@ -2,6 +2,7 @@
 	margin-top: 20px;
 	border: 1px solid lightgrey;
 	background-color: white;
+	width: 100%;
 }
 .feed-top-row {
 	margin-top: 6px;
@@ -31,15 +32,12 @@
 		rgba(0, 0, 0, .0001) 0%);
 }
 .feed-img-row {
-	height: 500px;
-}
-.carousel-inner .item {
-	width: 100%;
-	height: 500px;
+	height: 450px;
+	margin-bottom:5px;
 }
 .carousel-inner .item img {
 	width: 100%;
-	height: 100%;
+	height: 450px;
 }
 .carousel-inner{
 	border: 1px solid lightgrey;
@@ -52,6 +50,9 @@
 }
 .feed-content{
 	padding: 10px;
+	border-top: 1px solid lightgrey;
+	margin-left:0px;
+	margin-right:0px;
 }
 
 .feed-content span{
@@ -121,9 +122,35 @@
 .feed-story:focus{
 	outline: none;
 }
-
-
-
+.feed-img-modal{
+	height:50%;
+	text-align: center;
+	border: 2px dashed lightgrey;
+	margin-top: 20px;
+}
+.feed-img-modal-span{
+	font-size: 24px;
+	vertical-align: middle;
+	font-weight: bold;
+	line-height: 250px;
+}
+.imgdiv{
+	position: relative;
+	display: inline-block;s
+}
+.previewImg{
+	width:200px;
+	height: 180px;
+	margin: 15px;
+}
+.imgdeletemark{
+      display: none;   
+      text-align: center;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate( -50%, -50% );
+} 
 
 
 
