--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -8541,3 +8541,23 @@ textarea.form-control {
   100% {
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -136px; } }
+    
+    
+.packCreateBtnHome:hover {
+	color:white;
+	background-color: #ff8827;
+}
+
+.PackMainTop input:focus {
+	outline: none;
+}
+
+#accordion table tr:nth-child(1) {
+	font-size: 17px;
+	font-weight: 600;
+}
+
+#accordion table tr:nth-child(2) {
+	font-size: 7px;
+}
+
